--- a/style/index.css
+++ b/style/index.css
@@ -18,7 +18,7 @@ html {
 
 .container {
     width: 100%;
-    height: 114.1vh;
+    height: 112.9vh;
     background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -72,7 +72,21 @@ html {
 .bg-image {
     z-index: -1;
     position: absolute;
+    width: 100%;
 }
+
+.bg-video {
+    position:fixed;
+	left:0;
+        top:0;
+	min-width:100%;
+	min-height:100%;
+	width:auto;
+	height:auto;
+	z-index:-100;
+	visibility: visible;
+}
+
 
 .navbar {
     text-align: center;
@@ -238,6 +252,8 @@ nav a:hover {
 
 .bg-image-1{
     margin-top: -41px;
+    width: 100%;
+
 }
 
 .banner-2{
